# MPU60X0_RaspberryPi_Pico

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
docs/: GIT_COMMIT_RULES_DE.md  GIT_COMMIT_RULES_EN.md
include/: MPU-60X0_reg_map.h  MPU60X0_reg_map.h  gy521.h  gy521_reg_map.h  mpu60x0.h  ~MPU60X0_reg_map.h
lib/: ansi-esc.h  i2c.c  i2c.h  log.c  log.h  rp_pico.c  rp_pico.h  terminal.c  terminal.cfg.c  terminal.h
lib/mpu/: mpu.c  mpu.h  mpu_reg_map.h
src/: gy521.c  main.c  mpu60x0.c
